fix path to resources in index page.

--- a/TheWorld_V2/src/TheWorld_V2/Views/App/Index.cshtml
+++ b/TheWorld_V2/src/TheWorld_V2/Views/App/Index.cshtml
@@ -7,12 +7,12 @@
     <head>
         <title>The World - @ViewBag.Title</title>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="css/site.css" />
+        <link rel="stylesheet" href="~/css/site.css" />
     </head>
 
     <body>
         <div id="sidebar">
-            <img src="img/Schonnbrunn.jpg" alt="headshot" class="headshot" />
+            <img src="~/img/Schonnbrunn.jpg" alt="headshot" class="headshot" />
             <span id="username">Bobby Tables</span>
             <ul class="menu">
                 <li class="active"><a href="#">Home</a></li>
@@ -46,7 +46,7 @@
             </div>
             <footer id="footer">&copy; 2016 Colin D</footer>
         </div>
-        <script src="lib/jquery/dist/jquery.js"></script>
-        <script src="js/site.js"></script>
+        <script src="~/lib/jquery/dist/jquery.js"></script>
+        <script src="~/js/site.js"></script>
     </body>
 </html>
