--- a/TheWorld_V2/src/TheWorld_V2/Views/Shared/_Layout.cshtml
+++ b/TheWorld_V2/src/TheWorld_V2/Views/Shared/_Layout.cshtml
@@ -12,9 +12,9 @@
         <img src="~/img/Schonnbrunn.jpg" alt="headshot" class="headshot" />
         <span id="username">Bobby Tables</span>
         <ul class="menu">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li class="active"><a asp-controller="App" asp-action="Home">Home</a></li>
+            <li><a asp-controller="App" asp-action="About">About</a></li>
+            <li><a asp-controller="App" asp-action="Contact">Contact</a></li>
         </ul>
     </div>
 
