--- a/TheWorld_V2/src/TheWorld_V2/Views/App/Contact.cshtml
+++ b/TheWorld_V2/src/TheWorld_V2/Views/App/Contact.cshtml
@@ -12,14 +12,19 @@
 <h2>Contact Us!</h2>
 
 <form>
-    <label asp-for="Name" >Name</label>
-    <input asp-for="Name" />
+    <div asp-validation-summary="ValidationSummary.ModelOnly"></div>
 
-    <label asp-for="Name" >Email</label>
+    <label asp-for="Name">Name</label>
+    <input asp-for="Name"/>
+    <span asp-validation-for="Name"></span>
+
+    <label asp-for="Email">Email</label>
     <input asp-for="Email" type="email"/>
+    <span asp-validation-for="Email"></span>
 
-    <label asp-for="Name" >Message</label>
+    <label asp-for="Message">Message</label>
     <textarea asp-for="Message" cols="40" rows="6"></textarea>
+    <span asp-validation-for="Message"></span>
 
     <div>
         <input type="submit" value="Send Message"/>
