--- a/TheWorld_V2/src/TheWorld_V2/Views/App/Contact.cshtml
+++ b/TheWorld_V2/src/TheWorld_V2/Views/App/Contact.cshtml
@@ -11,7 +11,7 @@
 
 <h2>Contact Us!</h2>
 
-<form>
+<form method="post">
     <div asp-validation-summary="ValidationSummary.ModelOnly"></div>
 
     <label asp-for="Name">Name</label>
