adding confirmation message on clientside, ensuring we have the email from the config, and clearing the form upon successful post.

--- a/TheWorld_V2/src/TheWorld_V2/Views/App/Contact.cshtml
+++ b/TheWorld_V2/src/TheWorld_V2/Views/App/Contact.cshtml
@@ -12,6 +12,11 @@
 <h2>Contact Us!</h2>
 
 <form method="post">
+    @if (ViewBag.Message != null)
+    {
+        <div>@ViewBag.Message</div>
+    }
+
     <div asp-validation-summary="ValidationSummary.ModelOnly"></div>
 
     <label asp-for="Name">Name</label>
