--- a/TheWorld_V2/src/TheWorld_V2/Views/Shared/_Layout.cshtml
+++ b/TheWorld_V2/src/TheWorld_V2/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <div id="sidebar">
         <img src="~/img/Schonnbrunn.jpg" alt="headshot" class="headshot" />
         <span id="username">Bobby Tables</span>
-        <ul class="menu">
+        <ul class="nav">
             <li class="active"><a asp-controller="App" asp-action="Home">Home</a></li>
             <li><a asp-controller="App" asp-action="About">About</a></li>
             <li><a asp-controller="App" asp-action="Contact">Contact</a></li>
@@ -23,20 +23,37 @@
 
 
     <div id="wrapper">
-        <div id="main">
-            <div>
-                <button id="sidebarToggle" class="btn btn-primary">
-                    <i class="fa fa-angle-left"></i>
-                </button>
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <ul class="nav navbar-nav navbar-left">
+                    <li>
+                        <button id="sidebarToggle" class="btn btn-primary">
+                            <i class="fa fa-angle-left"></i>
+                        </button>
+                    </li>
+                </ul>
+                <a asp-controller="App" asp-action="Index" class="navbar-brand">The World</a>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="#" class="btn btn-sm btn-info"><i class="fa fa-save"></i> Save</a>
+                    </li>
+                    <li>
+                        <a href="#" class="btn btn-sm btn-info"><i class="fa fa-print"></i> Print</a>
+                    </li>
+                </ul>
             </div>
+        </nav>
+        <div id="main" class="container-fluid">
 
             <div>
                 @RenderBody()
             </div>
 
         </div>
-        <div id="footer">
-            <p class="text-primary">&copy; 2016 Colin D</p>
+        <div id="footer" class="container-fluid">
+            <div class="navbar navbar-inverse navbar-fixed-bottom ">
+                <h4 class="text-center text-info">&copy; 2016 Colin D</h4>
+            </div>
         </div>
     </div>
 
