--- a/TheWorld_V2/src/TheWorld_V2/Views/App/Index.cshtml
+++ b/TheWorld_V2/src/TheWorld_V2/Views/App/Index.cshtml
@@ -1,3 +1,4 @@
+@model IEnumerable<TheWorld_V2.Models.Trip>
 @{
     ViewBag.Title = "Home Page";
 }
@@ -10,20 +11,26 @@
         <form>
             <div class="form-group">
                 <label>Date</label>
-                <input class="form-control"/>
+                <input class="form-control" />
             </div>
             <div class="form-group">
                 <label>Location</label>
-                <input class="form-control"/>
+                <input class="form-control" />
             </div>
             <div>
-                <input type="submit" value="Add" class="btn btn-success"/>
+                <input type="submit" value="Add" class="btn btn-success" />
             </div>
         </form>
     </div>
 
     <div class="col-md-6">
         <h2>The Map</h2>
+        <ul>
+            @foreach (var trip in Model)
+            {
+                <li>@trip.Name (@trip.Created.ToShortDateString())</li>
+            }
+        </ul>
     </div>
 
 </div>
