--- a/TheWorld_V2/src/TheWorld_V2/Views/App/Index.cshtml
+++ b/TheWorld_V2/src/TheWorld_V2/Views/App/Index.cshtml
@@ -8,7 +8,7 @@
     <div class="col-md-12">
         <h1>Welcome to the world</h1>
         <p>This app will allow you to plan for world trips</p>
-        <a asp-controller="App" asp-action="trips" class="btn btn-lg btn-success"></a>
+        <a asp-controller="App" asp-action="trips" class="btn btn-lg btn-success">View my trips</a>
     </div>
 
 </div>
