--- a/TheWorld_V2/src/TheWorld_V2/Views/Shared/_Layout.cshtml
+++ b/TheWorld_V2/src/TheWorld_V2/Views/Shared/_Layout.cshtml
@@ -11,15 +11,24 @@
     </head>
 
 <body>
-    <div id="sidebar">
+<div id="sidebar">
+    @if (User.Identity.IsAuthenticated)
+    {
         <img src="~/img/Schonnbrunn.jpg" alt="headshot" class="headshot" />
-        <span id="username">Bobby Tables</span>
-        <ul class="nav">
-            <li class="active"><a asp-controller="App" asp-action="Home">Home</a></li>
-            <li><a asp-controller="App" asp-action="About">About</a></li>
-            <li><a asp-controller="App" asp-action="Contact">Contact</a></li>
-        </ul>
-    </div>
+        <span id="username">@User.Identity.Name</span>
+    }
+
+    <ul class="nav">
+        <li class="active"><a asp-controller="App" asp-action="Home">Home</a></li>
+        <li><a asp-controller="App" asp-action="About">About</a></li>
+        <li><a asp-controller="App" asp-action="Contact">Contact</a></li>
+        @if (User.Identity.IsAuthenticated)
+        {
+            <li><a asp-controller="App" asp-action="Trips">Trips</a></li>
+            <li><a asp-controller="App" asp-action="Logout">Logout</a></li>
+        }
+    </ul>
+</div>
 
 
     <div id="wrapper">
