--- a/TheWorld_V2/src/TheWorld_V2/Views/App/Trips.cshtml
+++ b/TheWorld_V2/src/TheWorld_V2/Views/App/Trips.cshtml
@@ -3,7 +3,35 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="row">
+@section Scripts {
+    <script type="text/javascript" src="~/lib/angular/angular.min.js"></script>
+    <script type="text/javascript" src="~/js/app-trips.js"></script>
+<script type="text/javascript" src="~/js/tripsController.js"></script>
+}
+
+<div class="row" ng-app="app-trips">
+
+    <div ng-controller="tripsController as vm" class="col-md-6 col-md-offset-3">
+        <table class="table table-responsive table-striped">
+            <tr ng-repeat="trip in vm.trips">
+                <td>{{trip.name}}</td>
+                <td>{{trip.created | date:'MM-dd-yyyy'}}</td>
+                <td><a href="#" class="btn btn-sm btn-primary">Manage</a></td>
+            </tr>
+        </table>
+
+        <form novalidate name="newTripForm" ng-submit="vm.addTrip()">
+            <div class="form-group">
+                <label for="name">Trip Name:</label>
+                <input class="form-control" type="text" id="name" name="name" ng-model="vm.newTrip.name"/>
+            </div>
+            <div class="form-group">
+                <input value="Add" type="submit" class="btn btn-submit btn-sm" />
+            </div>
+        </form>
+    </div>
+
+
     <div class="col-md-6">
         <h1>The World</h1>
         <p>This is the paragraph....</p>
@@ -11,14 +39,14 @@
         <form>
             <div class="form-group">
                 <label>Date</label>
-                <input class="form-control" />
+                <input class="form-control"/>
             </div>
             <div class="form-group">
                 <label>Location</label>
-                <input class="form-control" />
+                <input class="form-control"/>
             </div>
             <div>
-                <input type="submit" value="Add" class="btn btn-success" />
+                <input type="submit" value="Add" class="btn btn-success"/>
             </div>
         </form>
     </div>
