--- a/TheWorld_V2/src/TheWorld_V2/Views/App/Trips.cshtml
+++ b/TheWorld_V2/src/TheWorld_V2/Views/App/Trips.cshtml
@@ -11,6 +11,10 @@
 
 <div class="row" ng-app="app-trips">
 
+    <div class="text-danger" ng-show="vm.errorMessage">{{ vm.errorMessage }}</div>
+
+    <div ng-show="vm.isBusy" class="text-center"><i class="fa fa-spinner fa-spin"></i> Loading...</div>
+
     <div ng-controller="tripsController as vm" class="col-md-6 col-md-offset-3">
         <table class="table table-responsive table-striped">
             <tr ng-repeat="trip in vm.trips">
@@ -23,10 +27,14 @@
         <form novalidate name="newTripForm" ng-submit="vm.addTrip()">
             <div class="form-group">
                 <label for="name">Trip Name:</label>
-                <input class="form-control" type="text" id="name" name="name" ng-model="vm.newTrip.name"/>
+                <input class="form-control" type="text" id="name" name="name"
+                       ng-model="vm.newTrip.name" required ng-minlength="5"/>
+                <span class="text-warning" ng-show="newTripForm.$error.required">Name is required.</span>
+                <span class="text-warning" ng-show="newTripForm.$error.minlength">Name must be at least 5 chars.</span>
             </div>
             <div class="form-group">
-                <input value="Add" type="submit" class="btn btn-submit btn-sm" />
+                <input value="Add" type="submit" class="btn btn-submit btn-sm"
+                       ng-disabled="newTripForm.$invalid"/>
             </div>
         </form>
     </div>
