--- a/TheWorld_V2/src/TheWorld_V2/Views/Auth/Login.cshtml
+++ b/TheWorld_V2/src/TheWorld_V2/Views/Auth/Login.cshtml
@@ -15,7 +15,7 @@
             <div class="form-group">
                 <label asp-for="UserName"></label>
                 <input asp-for="UserName" class="form-control" />
-                <span asp-validation-for="Username"></span>
+                <span asp-validation-for="UserName"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Password"></label>
