--- a/TheWorld_V2/src/TheWorld_V2/Views/App/Trips.cshtml
+++ b/TheWorld_V2/src/TheWorld_V2/Views/App/Trips.cshtml
@@ -5,15 +5,16 @@
 
 @section Scripts {
     <script type="text/javascript" src="~/lib/angular/angular.min.js"></script>
+    <script type="text/javascript" src="~/js/simpleControls.js"></script>
     <script type="text/javascript" src="~/js/app-trips.js"></script>
-<script type="text/javascript" src="~/js/tripsController.js"></script>
+    <script type="text/javascript" src="~/js/tripsController.js"></script>
 }
 
 <div class="row" ng-app="app-trips">
 
     <div class="text-danger" ng-show="vm.errorMessage">{{ vm.errorMessage }}</div>
 
-    <div ng-show="vm.isBusy" class="text-center"><i class="fa fa-spinner fa-spin"></i> Loading...</div>
+    <wait-cursor display-when="vm.isBusy"></wait-cursor>
 
     <div ng-controller="tripsController as vm" class="col-md-6 col-md-offset-3">
         <table class="table table-responsive table-striped">
