--- a/TheWorld_V2/src/TheWorld_V2/Views/App/Trips.cshtml
+++ b/TheWorld_V2/src/TheWorld_V2/Views/App/Trips.cshtml
@@ -5,7 +5,7 @@
 
 @section Scripts {
     <script type="text/javascript" src="~/lib/angular/angular.min.js"></script>
-    <script type="text/javascript" src="~/lib/angular-route/angular-route.min.js.map.min.js"></script>
+    <script type="text/javascript" src="~/lib/angular-route/angular-route.min.js"></script>
     <script type="text/javascript" src="~/js/simpleControls.js"></script>
     <script type="text/javascript" src="~/js/app-trips.js"></script>
     <script type="text/javascript" src="~/js/tripsController.js"></script>
@@ -13,62 +13,6 @@
 
 <div class="row" ng-app="app-trips">
 
-    <div class="text-danger" ng-show="vm.errorMessage">{{ vm.errorMessage }}</div>
-
-    <wait-cursor display-when="vm.isBusy"></wait-cursor>
-
-    <div ng-controller="tripsController as vm" class="col-md-6 col-md-offset-3">
-        <table class="table table-responsive table-striped">
-            <tr ng-repeat="trip in vm.trips">
-                <td>{{trip.name}}</td>
-                <td>{{trip.created | date:'MM-dd-yyyy'}}</td>
-                <td><a href="#" class="btn btn-sm btn-primary">Manage</a></td>
-            </tr>
-        </table>
-
-        <form novalidate name="newTripForm" ng-submit="vm.addTrip()">
-            <div class="form-group">
-                <label for="name">Trip Name:</label>
-                <input class="form-control" type="text" id="name" name="name"
-                       ng-model="vm.newTrip.name" required ng-minlength="5"/>
-                <span class="text-warning" ng-show="newTripForm.$error.required">Name is required.</span>
-                <span class="text-warning" ng-show="newTripForm.$error.minlength">Name must be at least 5 chars.</span>
-            </div>
-            <div class="form-group">
-                <input value="Add" type="submit" class="btn btn-submit btn-sm"
-                       ng-disabled="newTripForm.$invalid"/>
-            </div>
-        </form>
-    </div>
-
-
-    <div class="col-md-6">
-        <h1>The World</h1>
-        <p>This is the paragraph....</p>
-
-        <form>
-            <div class="form-group">
-                <label>Date</label>
-                <input class="form-control"/>
-            </div>
-            <div class="form-group">
-                <label>Location</label>
-                <input class="form-control"/>
-            </div>
-            <div>
-                <input type="submit" value="Add" class="btn btn-success"/>
-            </div>
-        </form>
-    </div>
-
-    <div class="col-md-6">
-        <h2>The Map</h2>
-        <ul>
-            @foreach (var trip in Model)
-            {
-                <li>@trip.Name (@trip.Created.ToShortDateString())</li>
-            }
-        </ul>
-    </div>
-
+    <div ng-view></div>
+    
 </div>
