working on trip editor view

--- a/TheWorld_V2/src/TheWorld_V2/Views/App/Trips.cshtml
+++ b/TheWorld_V2/src/TheWorld_V2/Views/App/Trips.cshtml
@@ -1,4 +1,3 @@
-@model IEnumerable<TheWorld_V2.Models.Trip>
 @{
     ViewBag.Title = "Home Page";
 }
@@ -9,6 +8,7 @@
     <script type="text/javascript" src="~/js/simpleControls.js"></script>
     <script type="text/javascript" src="~/js/app-trips.js"></script>
     <script type="text/javascript" src="~/js/tripsController.js"></script>
+    <script type="text/javascript" src="~/js/tripEditorController.js"></script>
 }
 
 <div class="row" ng-app="app-trips">
