--- a/TheWorld_V2/src/TheWorld_V2/wwwroot/views/tripEditorView.html
+++ b/TheWorld_V2/src/TheWorld_V2/wwwroot/views/tripEditorView.html
@@ -1,28 +1,27 @@
-<div class="col-md-6">
-    <h1>The World</h1>
-    <p>This is the paragraph....</p>
+<div>
+    <a href="#/" class="btn btn-sm btn-default"><i class="fa fa-angle-left"></i>Back</a>
 
-    <form>
-        <div class="form-group">
-            <label>Date</label>
-            <input class="form-control"/>
-        </div>
-        <div class="form-group">
-            <label>Location</label>
-            <input class="form-control"/>
-        </div>
-        <div>
-            <input type="submit" value="Add" class="btn btn-success"/>
-        </div>
-    </form>
-</div>
+    <div class="col-md-6">
+        <h1>The World</h1>
+        <p>This is the paragraph....</p>
 
-<div class="col-md-6">
-    <h2>The Map</h2>
-    <ul>
-        @foreach (var trip in Model)
-        {
-        <li>@trip.Name (@trip.Created.ToShortDateString())</li>
-        }
-    </ul>
+        <form>
+            <div class="form-group">
+                <label>Date</label>
+                <input class="form-control"/>
+            </div>
+            <div class="form-group">
+                <label>Location</label>
+                <input class="form-control"/>
+            </div>
+            <div>
+                <input type="submit" value="Add" class="btn btn-success"/>
+            </div>
+        </form>
+    </div>
+
+    <div class="col-md-6">
+        <h2>The Map</h2>
+        <ul></ul>
+    </div>
 </div>
