--- a/TheWorld_V2/src/TheWorld_V2/wwwroot/views/tripEditorView.html
+++ b/TheWorld_V2/src/TheWorld_V2/wwwroot/views/tripEditorView.html
@@ -1,9 +1,22 @@
 <div>
     <a href="#/" class="btn btn-sm btn-default"><i class="fa fa-angle-left"></i>Back</a>
 
-    <div class="col-md-6">
-        <h1>The World</h1>
-        <p>This is the paragraph....</p>
+    <div class="col-md-3">
+        <h2>{{vm.tripName}}</h2>
+        <wait-cursor display-when="vm.isBusy"></wait-cursor>
+
+        <div ng-show="vm.errorMessage" class="alert alert-danger">{{vm.errorMessage}}</div>
+
+        <table class="table table-responsive table-striped">
+            <tr>
+                <th>Location</th>
+                <th>Arrival</th>
+            </tr>
+            <tr ng-repeat="stop in vm.stops">
+                <td>{{stop.location}}</td>
+                <td>{{stop.arrival | date}}</td>
+            </tr>
+        </table>
 
         <form>
             <div class="form-group">
@@ -20,7 +33,7 @@
         </form>
     </div>
 
-    <div class="col-md-6">
+    <div class="col-md-9">
         <h2>The Map</h2>
         <ul></ul>
     </div>
