showing stops on trip edit view

--- a/TheWorld_V2/src/TheWorld_V2/wwwroot/views/tripEditorView.html
+++ b/TheWorld_V2/src/TheWorld_V2/wwwroot/views/tripEditorView.html
@@ -13,7 +13,7 @@
                 <th>Arrival</th>
             </tr>
             <tr ng-repeat="stop in vm.stops">
-                <td>{{stop.location}}</td>
+                <td>{{stop.name}}</td>
                 <td>{{stop.arrival | date}}</td>
             </tr>
         </table>
