implementing google map/travelmap functionality

--- a/TheWorld_V2/src/TheWorld_V2/wwwroot/views/tripEditorView.html
+++ b/TheWorld_V2/src/TheWorld_V2/wwwroot/views/tripEditorView.html
@@ -36,6 +36,8 @@
 
     <div class="col-md-9">
         <h2>The Map</h2>
-        <ul></ul>
+        <div id="map">
+            
+        </div>
     </div>
 </div>
