--- a/TheWorld_V2/src/TheWorld_V2/Views/App/Trips.cshtml
+++ b/TheWorld_V2/src/TheWorld_V2/Views/App/Trips.cshtml
@@ -3,8 +3,10 @@
 }
 
 @section Scripts {
+    <script type="text/javascript" src="~/lib/underscore/underscore-min.js"></script>
     <script type="text/javascript" src="~/lib/angular/angular.min.js"></script>
     <script type="text/javascript" src="~/lib/angular-route/angular-route.min.js"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
     <script type="text/javascript" src="~/lib/gmaps/gmaps.min.js"></script>
     <script type="text/javascript" src="~/lib/travelmap/travelmap.min.js"></script>
     <script type="text/javascript" src="~/js/simpleControls.js"></script>
