--- a/TheWorld_V2/src/TheWorld_V2/wwwroot/views/tripEditorView.html
+++ b/TheWorld_V2/src/TheWorld_V2/wwwroot/views/tripEditorView.html
@@ -8,17 +8,24 @@
 
         <div ng-show="vm.errorMessage" class="alert alert-danger">{{vm.errorMessage}}</div>
 
-        <form>
+        <form novalidate name="newStopForm">
             <div class="form-group">
                 <label>Date</label>
-                <input class="form-control"/>
+                <input class="form-control" id="arrival" name="arrival" ng-model="vm.newStop.arrival"
+                       ng-pattern="/^(\d{2})\/(\d{2})\/(\d{4})$/" required/>
+                <span class="text-danger" ng-show="newStopForm.arrival.$error.required">Required</span>
+                <span class="text-danger" ng-show="newStopForm.arrival.$error.pattern">Must be in MM/DD/YYYY format.</span>
             </div>
             <div class="form-group">
                 <label>Location</label>
-                <input class="form-control"/>
+                <input class="form-control" name="name" id="name" ng-model="vm.newStop.name"
+                       ng-minlength="5" required/>
+                <span class="text-danger" ng-show="newStopForm.name.$error.required">Required</span>
+                <span class="text-danger" ng-show="newStopForm.name.$error.minlength">Must be at least 5 characters.</span>
             </div>
             <div>
-                <input type="submit" value="Add" class="btn btn-success"/>
+                <input type="submit" value="Add" class="btn btn-success"
+                       ng-disabled="newStopForm.$invalid" />
             </div>
         </form>
 
