--- a/TheWorld_V2/src/TheWorld_V2/wwwroot/views/tripEditorView.html
+++ b/TheWorld_V2/src/TheWorld_V2/wwwroot/views/tripEditorView.html
@@ -8,7 +8,7 @@
 
         <div ng-show="vm.errorMessage" class="alert alert-danger">{{vm.errorMessage}}</div>
 
-        <form novalidate name="newStopForm">
+        <form novalidate name="newStopForm" ng-submit="vm.addStop()">
             <div class="form-group">
                 <label>Date</label>
                 <input class="form-control" id="arrival" name="arrival" ng-model="vm.newStop.arrival"
